doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\lib\bluejcore.jar;C:\Program Files (x86)\lib\junit-4.11.jar;C:\Program Files (x86)\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\lib\lang-stride.jar;C:\Program Files (x86)\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\lib\userlib\pi4j-service.jar;J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework
-d
J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\doc
-encoding
windows-1252
-charset
windows-1252
J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\ComputerPlayer.java
<---- end of javadoc command ---->
Loading source file J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\ComputerPlayer.java...
Constructing Javadoc information...
J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\ComputerPlayer.java:1: error: cannot find symbol
import java.util.random;
                ^
  symbol:   class random
  location: package java.util
J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\ComputerPlayer.java:7: error: cannot find symbol
    private Random rand;
            ^
  symbol:   class Random
  location: class ComputerPlayer
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\doc\ComputerPlayer.html...
Generating J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\doc\package-frame.html...
Generating J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\doc\package-summary.html...
Generating J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\doc\allclasses-frame.html...
Generating J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\doc\allclasses-noframe.html...
Generating J:\DUDE\Desktop\Practicals\Introduction to Programming Practicals\Easter Coursework\doc\index.html...
2 warnings
